Выполнить задание 11-го спринта